# Hermes

./: Cargo.toml  Config.toml  README.md
src/: main.rs  model.rs
src/actuator/: mod.rs
src/command_resolution/: analytical_structure.rs  command_model.rs  command_resolution.rs  judge_text.rs  mod.rs
src/db_pool_manager/: db_pool.rs  db_pool_manager.rs  mod.rs
src/server/: mod.rs  server.rs  socket.rs  tcp.rs  websocket.rs
src/tcp/: handle_client.rs  mod.rs  tcp_server.rs
