[package]
name = "Hermes"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "mysql"] }
sea-query = { version = "0.30", features = ["backend-mysql"] }
regex = "1"
chrono = { version = "0.4", features = ["clock"] }
toml = "0.5"
dashmap = "5"